# modelator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  Makefile  Modelator.md  ModelatorShell.md  README.md  go.mod  go.sum  index.html  modelator.py  modelator_api.py.example  modelator_shell.py  pyproject.toml  status.html  status.md  z_notes.md
examples/hanoi/: README.md  pyproject.toml
examples/hanoi/hanoi/: __init__.py
examples/hanoi/model/: hanoi.tla
examples/hanoi/tests/: test_hanoi.py
modelator/: .gitignore  Cargo.toml  Model.py  ModelMonitor.py  ModelResult.py  ModelShell.py  README.md  __init__.py  __main__.py  _version.py  check.py  const_values.py  constants.py  exp.py  exp_shell.py  itf.py  modelator_shell.py  parse.py  typecheck.py
modelator-core/: .gitignore  Cargo.toml  TODO
modelator-core/src/: config.rs  error.rs  jar.rs  lib.rs  main.rs  options.rs  tlc.rs
modelator-core/src/mc/: json.rs  mod.rs  trace.rs  util.rs
modelator-core/src/mc/tlc/: mod.rs  output.rs
modelator/checker/: CheckResult.py  check.py  simulate.py
modelator/cli/: __init__.py  model_config_file.py  model_file.py
modelator/examples/: auto_complete.rs  json_trace.rs
modelator/monitor/: content.py  markdown.py  markdown_writer.py  model_monitor.py
modelator/monitors/: content.py  html.py  html_monitor.py  html_writer.py  markdown.py  markdown_monitor.py  markdown_writer.py
modelator/monitors/templates/: html_monitor.html  html_section.html  html_section_entry.html  html_table.html  html_trace.html
modelator/pytest/: __init__.py  decorators.py
modelator/samples/: AlarmClock.tla  Hello.cfg  HelloFlawedType.tla  HelloFull.config.toml  HelloFull.tla  HelloFull1.itf.json  HelloInv.tla  HelloWorld.tla  HourClock.tla  HourClockTraits.tla
modelator/src/: artifact.rs  converter.rs  datachef.rs  error.rs  event.rs  jar.rs  lib.rs  main.rs  module.rs  options.rs  runner.rs  step_runner.rs  test_util.rs  tester.rs  util.rs
modelator/src/artifact/: artifact.rs  cmds.rs  json_trace.rs  mod.rs  model.rs  model_checker_stdout.rs  tla_cfg.rs  tla_cfg_file.rs  tla_config_file.rs  tla_file.rs  tla_file_suite.rs  tla_trace.rs  trace.rs
modelator/src/cache/: mod.rs  tla_trace.rs
modelator/src/checker/: mod.rs  model_checker.rs  options.rs
modelator/src/checker/apalache/: mod.rs
modelator/src/checker/tlc/: mod.rs  output.rs
modelator/src/cli/: mod.rs  output.rs
modelator/src/macros/: module.rs
modelator/src/mc/: json.rs  mod.rs  trace.rs  util.rs
modelator/src/mc/json/: mod.rs  parser.rs
modelator/src/mc/tlc/: mod.rs  output.rs
modelator/src/model/checker/: mod.rs
modelator/src/model/checker/apalache/: cmd_output.rs  error.rs  mod.rs
modelator/src/model/checker/tlc/: mod.rs  output.rs
modelator/src/model/language/tla/: mod.rs
modelator/src/module/: mod.rs  util.rs
modelator/src/module/apalache/: counterexample.rs  error.rs  error_message.rs  log.rs  mod.rs  model_checking_log.rs
modelator/src/module/tla/: mod.rs
modelator/src/module/tla/json/: mod.rs  parser.rs
modelator/src/module/tlc/: log.rs  mod.rs  output.rs
modelator/src/tla/: mod.rs
modelator/src/util/: convert.rs
modelator/tests/: traffic.rs
modelator/tests/integration/: common.rs  error.rs  main.rs  test_batch_list.json
modelator/tests/integration/resource/: IBC_0.tla  IBC_chain.tla  IBC_ics02.json  IBC_ics02.tla  IBC_ics03.tla  IBC_tests.tla  Indices.cfg  Indices.json  IndicesBalancesHistoryTests.tla  IndicesBalancesTests.tla  IndicesHistoryTests.tla  IndicesTests.tla  Numbers.json  TrafficCrossing.json  numbers.rs
modelator/tests/integration/tla/: IBC_ics02.tla  IndicesBalancesHistoryTests.tla  IndicesBalancesTests.tla  IndicesHistoryTests.tla  IndicesTests.cfg  IndicesTests.tla  Numbers.cfg  Numbers.tla  NumbersAMinBMaxTest.tla  TrafficCrossing.cfg  TrafficCrossing.tla  TrafficCrossingHistoryTest.cfg  TrafficCrossingHistoryTest.tla  TrafficCrossingTest.cfg  TrafficCrossingTest.tla
modelator/utils/: ErrorMessage.py  apalache_helpers.py  apalache_jar.py  helpers.py  model_exceptions.py  modelator_helpers.py  modelatorpy_helpers.py  shell_helpers.py  tla_helpers.py
py/: pyproject.toml
python/: .gitignore  .pre-commit-config.yaml  ModelatorShell.md  modelator_shell.py  pyproject.toml
python/modelator/: check.py  constants.py  itf.py  itf_diff.py  parse.py  typecheck.py  utils.py
python/modelator/samples/: Hello.tla  HelloFlawed.tla  HelloFlawedType.tla  HelloInv.tla  helloModel.json
python/modelator/utils/: ErrorMessage.py  apalache_helpers.py  shell_helpers.py  tla_helpers.py  tlc_helpers.py
python/tests/: test_check.py  test_modelator.py  test_parse.py  test_typecheck.py  test_utils.py
python/tests/sampleFiles/: HelloFlawed1.tla  HelloFlawed2.tla
python/tests/sampleFiles/check/: Hello.tla
python/tests/sampleFiles/check/correct/: Hello.tla
python/tests/sampleFiles/correct/: Hello_Hi.tla
python/tests/sampleFiles/typecheck/: Hello2.tla
rs/modelator/: Cargo.toml
rs/modelator/src/: error.rs  jar.rs  lib.rs  step_runner.rs  test_util.rs
rs/modelator/src/artifact/: tla_config_file.rs  tla_file.rs  tla_trace.rs
rs/modelator/src/cache/: tla_trace.rs
rs/modelator/src/cli/: mod.rs
rs/modelator/tests/integration/: error.rs
rust/: Cargo.toml  README.md
rust/ffi/: Cargo.toml
rust/ffi/src/: .gitignore  lib.rs
rust/src/: error.rs  jar.rs  lib.rs  main.rs  tester.rs  util.rs
rust/src/artifact/: json_trace.rs  tla_file_suite.rs
rust/src/cache/: mod.rs
rust/src/cli/: mod.rs
rust/src/model/: mod.rs
rust/src/model/checker/: mod.rs
rust/src/model/checker/apalache/: mod.rs
rust/src/model/language/: mod.rs
rust/tests/integration/: common.rs  main.rs
rust/tests/integration/resource/: 2PossibleTracesTests.tla  IndicesBalances.tla  IndicesBalancesExec.tla  IndicesBalancesHistoryTests.tla  IndicesBalancesTests.tla  IndicesExec.tla  IndicesHistoryTests.tla  IndicesTests.cfg  IndicesTests.tla  Numbers.tla  NumbersAMaxBMaxTest.tla  NumbersAMaxBMinTest.tla  NumbersBIsOdd.tla  TrafficCrossing.tla
(+264 files in other folders)
