[tool.poetry]
name = "modelator"
version = "0.4.2"
description = "Python bindings of Modelator"
license = "Apache-2.0"
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]

[tool.poetry.dependencies]
python = "^3.10"
deepdiff = "^5.8.1"
tabulate = "^0.8.9"
modelator-py = "^0.2.0"
watchdog = "^2.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
prospector = "^1.7.7"
mypy = "^0.950"
bandit = "^1.7.4"
fire = "^0.4.0"
syrupy = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
