[tool.poetry]
name = "modelator"
version = "0.4.2"
description = "Framework for Model Based Testing"
authors = [
  "Andrey Kuprianov <andrey@informal.systems>",
  "Hernán Vanzetto <hernan@informal.systems>",
  "Ivan Gavran <ivan@informal.systems>",
  "Ranadeep Biswas <mail@rnbguy.at>",
]
keywords = [
  "testing",
  "model based testing",
  "formal method",
  "model checker",
  "tla",
  "apalache",
  "tlc",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/atomkraft"
include = ["LICENSE"]
classifiers = [
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.10"
deepdiff = "^5.8.1"
tabulate = "^0.8.9"
modelator-py = "^0.2.1"
watchdog = "^2.1.8"
typing-extensions = "^4.2.0"
wget = "^3.2"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
fire = "^0.4.0"
pytest = "^7.1.2"
syrupy = "^2.3.0"
prospector = { extras = ["with_mypy", "with_bandit"], version = "^1.7.7" }

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
pytest11 = { pytest-modelator = "modelator.pytest" }

[tool.pytest.ini_options]
markers = [
  "network: marks test as running over network (deselect with '-m \"not network\"')",
]
