[package]
name = "modelator-core"
version = "0.1.0"
authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
reqwest = "0.11.1"
serde_json = "1.0.62"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["fs", "macros", "rt-multi-thread", "process"] }
