[package]
name = "modelator"
description = "A framework and tools for model-based testing."
version = "0.3.0"
edition = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["testing", "model", "model-based", "TLA", "abstraction"]
repository = "https://github.com/informalsystems/modelator"
authors = [
    "Vitor Enes <vitorenesduarte@gmail.com>", 
    "Andrey Kuprianov <andrey@informal.systems>",
    "Ranadeep Biswas <ranadeep@informal.systems>",
    "Daniel Tisdall <daniel@informal.systems>"
]

[dependencies]
clap = "=3.0.0-beta.4"
hex = "0.4.3"
nom = "7.0.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sha2 = "0.9.5"
tempfile = "3.2.0"
thiserror = "1.0.26"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
ureq = "2.1.1"

[dev-dependencies]
clap_generate = "=3.0.0-beta.4"
once_cell = "1.8.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
