[tool.poetry]
name = "modelator"
version = "0.4.1"
description = "Python bindings of Modelator"
license = "Apache-2.0"
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
