[package]
name = "modelator"
description = "A framework and tools for model-based testing."
version = "0.4.2"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"
readme = "README.md"
keywords = ["testing", "model", "model-based", "TLA", "abstraction"]
repository = "https://github.com/informalsystems/modelator"
authors = [
  "Vitor Enes <vitorenesduarte@gmail.com>",
  "Andrey Kuprianov <andrey@informal.systems>",
  "Ranadeep Biswas <ranadeep@informal.systems>",
  "Daniel Tisdall <daniel@informal.systems>",
]

[dependencies]
clap = { version = "3.1.6", features = ["derive", "cargo"] }
clap_complete = "3.1.1"
directories = "4.0.1"
hex = "0.4.3"
lazy_static = "1.4.0"
nom = "7.1.0"
once_cell = "1.10.0"
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
tempfile = "3.3.0"
thiserror = "1.0.30"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
ureq = "2.4.0"
zip = "0.5.13"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
shlex = "1.1.0"
