[tool.poetry]
name = "hanoi"
version = "0.1.0"
description = ""
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
munch = "^2.5.0"
pytest = "^7.2.0"
modelator = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
